--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -13,8 +13,10 @@
 </head>
 
 <body>
+    {% include 'components/header.html.twig' %}
     {% block content %}{% endblock %}
     {% block javascript %}{% endblock %}
+    {% include 'components/footer.html.twig' %}
 </body>
 </html>
 
