--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -8,7 +8,8 @@
 
     <title>{% block title %}{% endblock %}</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
+    <link rel="stylesheet" href="/assets/css/global.css">
     {% block stylesheet %}{% endblock %}
 </head>
 
