--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -8,7 +8,8 @@
 
     <title>{% block title %}{% endblock %}</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/global.css">
     {% block stylesheet %}{% endblock %}
 </head>
 
@@ -16,6 +17,7 @@
     {% include 'components/_header.html.twig' %}
     {% block content %}{% endblock %}
     {% include 'components/_footer.html.twig' %}
+    <script src="/assets/js/header.js"></script>
     {% block javascript %}{% endblock %}
 </body>
 </html>
