--- a/src/View/components/_header.html.twig
+++ b/src/View/components/_header.html.twig
@@ -1,4 +1,4 @@
-<header>
+<header id="header">
     <a id="aHeaderLogo" href="/">
         <img id="logo_header" src="assets/images/components/logo-black.svg" alt="logo du site Blog-e-Boulga">
     </a>
@@ -11,18 +11,24 @@
         <li><a href="/contact_us"><img src="assets/images/components/enveloppe.svg" alt="icône d'une enveloppe" /> Contactez-nous</a></li>
     </ul>
 
-    <button id="burger_icon" class="menuBurgerGlobal" aria-label="Main Menu">
+    <button id="burger_icon" class="menuToggle menuBurgerGlobal"
+            aria-label="Main Menu">
         <svg width="50" height="50" viewBox="0 0 100 100">
-            <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-            <path class="line line2" d="M 20,50 H 80" />
-            <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+            <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"></path>
+            <path class="line line2" d="M 20,50 H 80"></path>
+            <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"></path>
         </svg>
     </button>
 </header>
 
-<ul id="burger_menue">
-    <li class="item-li"><a href="/"><img src="assets/images/components/home.svg" alt="icône d'une maison" /> Accueil</a></li>
-    <li class="item-li"><a href="/about_us"><img
-                src="assets/images/components/buste.svg" alt="icône d'un buste d'homme" /> Qui sommes-nous ?</a></li>
-    <li class="item-li"><a href="/contact_us"><img src="assets/images/components/enveloppe.svg" alt="icône d'une enveloppe" /> Contactez-nous</a></li>
-</ul>
+<div class="wrap">
+    <div id="menu-mainmenu">
+        <ul class="nav">
+            <li><a href="/"><img src="assets/images/components/home.svg" alt="icône d'une maison" /> Accueil</a></li>
+            <li><a href="/about_us"><img
+                        src="assets/images/components/buste.svg" alt="icône d'un buste d'homme" /> Qui sommes-nous ?</a></li>
+            <li><a href="/contact_us"><img src="assets/images/components/enveloppe.svg" alt="icône d'une enveloppe" /> Contactez-nous</a></li>
+
+        </ul>
+    </div>
+</div>
