added body id for burger menu

--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -14,7 +14,7 @@
     {% block stylesheet %}{% endblock %}
 </head>
 
-<body>
+<body id="body">
     {% include 'components/_header.html.twig' %}
     {% block content %}{% endblock %}
     {% include 'components/_footer.html.twig' %}
