--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'layout.html.twig' %}
-{% block stylesheet %} <link rel="assets/css/home.css" {% endblock %}
+{% block stylesheet %} 
+    <link rel="stylesheet" href="/assets/css/home.css">
+{% endblock %}
 {% block content %}
     <section class="hotNews_block">
     
@@ -25,5 +27,25 @@
             </a>
         
     </article>
+</section>
+<span class="separation_bar"><img class="separation" src="/assets/images/components/separation.svg" alt="Barre de séparation"></span>
+
+<section class="article_list">
+    
+            <a href="article.php?article=<?= $articleInfo['parameter_url'] ?>">
+                <article class="article_block">
+                    <div class="card_container">
+                        <div class="card2">
+                            <img class="medium" src="<?= $articleInfo['coverImg'] ?>" alt="image de l'article secondaire">
+                        </div>
+                    </div>
+                    <div class="little_article">
+                        <h3> $articleInfo['title'] </h3>
+                        <p>articleInfo['description']
+                        </p>
+                    </div>
+                </article>
+            </a>
+       
 </section>
 {% endblock %}
