--- a/public/assets/css/contact_us.css
+++ b/public/assets/css/contact_us.css
@@ -7,8 +7,16 @@ main {
 h1 {
     color: #000;
     text-align: center;
-    font-family: Titillium Web;
+    font-family: Titillium Web, sans-serif;
     font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.error {
+    color: red;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
