--- a/public/assets/css/contact_us.css
+++ b/public/assets/css/contact_us.css
@@ -32,11 +32,12 @@ small {
     font-size: 0.75rem;
 }
 
-#msg_sent {
-    display: none;
+.msg_sent {
     color: green;
-    text-decoration: none;
-    margin-top: 0.5rem;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 #mainPage {
