--- a/src/View/AboutUs/index.html.twig
+++ b/src/View/AboutUs/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layouts.html.twig' %}
+{% extends 'layout.html.twig' %}
 {% block title %} About Us {% endblock %}
 {% block stylesheet %}
     <link rel="stylesheet" href="/assets/css/about_us.css">
