front modification - success messages/page

--- a/src/View/Contact/contact.html.twig
+++ b/src/View/Contact/contact.html.twig
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="/assets/css/contact_us.css">
 {% endblock %}
 
-{% block javascript %}
+{#{% block javascript %}
 <script src="assets/js/contact.js"></script>
-{% endblock %}
+{% endblock %}#}
 
 {% block content %}
 <main>
@@ -27,52 +27,61 @@
         </div>
 
         <div id="contactUsBlock">
-
+            {% if success is not defined %}
             <form action="" method="post" class="contactUsForm">
                 <p id="header-form">Contacter l’équipe e-Boulga</p>
                 <div>
                     <label for="firstName">Votre prénom :<span class="asterix"> *</span></label>
                     <input id="prenom" class="input_form" type="text" name="firstName" placeholder="John" value="{% if post is defined %}{{ post.firstName }}{% endif %}"/>
-                    <small style="display: none;">Champs obligatoire</small>
+                    <small style="display: none;">Minimum 2 caractères requis</small>
                 </div>
                 <div>
                     <label for="lastName">Votre nom :<span class="asterix"> *</span></label>
                     <input id="nom" class="input_form" type="text" name="lastName" placeholder="Doe" value="{% if post is defined %}{{ post.lastName
                     }}{% endif %}"/>
-                    <small style="display: none;">Champs obligatoire</small>
+                    <small style="display: none;">Minimum 2 caractères requis</small>
                 </div>
                 <div>
                     <label for="emailAddress">Votre adresse mail :<span class="asterix"> *</span></label>
                     <input id="mail" class="input_form" type="email" name="emailAddress" placeholder="john@doe.com" value="{% if post is defined
                     %}{{ post.emailAddress }}{% endif %}"/>
-                    <small style="display: none;">Adresse valide requise</small>
+                    <small style="display: none;">Adresse email valide requise</small>
                 </div>
                 <div>
                     <label for="topic">Sujet de votre message :<span class="asterix"> *</span></label>
                     <input id="subject" class="input_form" type="text" name="topic" placeholder="Propostion d'article" value="{% if post is defined
                     %}{{ post.topic }}{% endif %}"/>
-                    <small style="display: none;">Champs obligatoire</small>
+                    <small style="display: none;">Minimum 4 caractères requis</small>
                 </div>
                 <div>
                     <label for="messageContent">Votre message :<span class="asterix"> *</span></label>
                     <textarea class="input_form" id="message" rows="5" name="messageContent">{% if post is defined %}{{ post.messageContent }}{% endif %}</textarea>
-                    <small style="display: none;">Champs obligatoire</small>
+                    <small style="display: none;">Minimum 10 caractères requis</small>
                 </div>
                 <div id="validationCheck">
                     <input class="input_form" type="checkbox" name="validation" id="validation" />
-                    <label class="labelMod" for="validation">En cochant cette case, vous acceptez nos <a href="#">modalités et conditions</a> d'utilisation ainsi que notre <a href="#">politique de confidentitalité</a> pour la gestion des données fournies dans ce formulaire.<span class="asterix"> *</span></label>
+                    <label class="labelMod" for="validation">En cochant cette case, vous acceptez nos <a href="#">modalités et
+                            conditions</a>
+                        d'utilisation ainsi que notre <a href="#">politique de confidentitalité</a> pour la gestion des données fournies dans ce formulaire.<span class="asterix"> *</span></label>
                 </div>
-                {% if success is defined %}
-                    <p class="msg_sent">{{ success }}</p>
-                {% endif %}
-                {% if error is defined %}
+
+                {% if errors is defined %}
+                    {% for error in errors %}
                 <p class="error">{{ error }}</p>
+                    {% endfor %}
                 {% endif %}
+
                 <div id="validationButton">
                     <button name="envoyer" id="btn_submit" type="submit">Envoyer</button>
                 </div>
-
             </form>
+            {% endif %}
+            {% if success is defined %}
+            <div class="confirmation-box contactUsBlock">
+                <p class=".msg_sent">{{ success }}</p>
+                <a href="/contact_us">→ Renvoyer un message</a>
+            </div>
+            {% endif %}
         </div>
     </div>
 </main>
