--- a/public/assets/css/contact_us.css
+++ b/public/assets/css/contact_us.css
@@ -14,6 +14,45 @@ h1 {
     line-height: normal;
 }
 
+.confirmation-box {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.confirmation-box p {
+    padding: 1rem;
+    border-radius: 10px;
+    background: #147914;
+    color: whitesmoke;
+    text-align: center;
+    width: 100%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.confirmation-box a {
+    margin-top: 2rem;
+    padding: 1rem;
+    border-radius: 10px;
+    background: var(--main-color);
+    color: black;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.confirmation-box a:hover {
+    cursor: pointer;
+    -webkit-animation-name: pulse;
+    animation-name: pulse;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
 .error {
     color: red;
     font-size: 1rem;
@@ -179,7 +218,7 @@ input {
     #mainPage {
         margin: 0 13rem;
         display: grid;
-        grid-template-rows: repeat(2, auto);
+        grid-template-rows: repeat(2, 1fr);
         grid-template-columns: 1fr;
         justify-content: center;
     }
@@ -203,6 +242,13 @@ input {
         max-width: 450px;
         width: 100%;
         min-width: 350px;
+    }
+
+    .confirmation-box {
+        justify-content: flex-start;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 1rem;
     }
 }
 
