updated correct link redirection

--- a/src/View/components/_footer.html.twig
+++ b/src/View/components/_footer.html.twig
@@ -1,9 +1,9 @@
 <footer>
     <ul id="list_nav_footer">
-        <li><a href="index.php"><img src="assets/images/components/home.svg"
+        <li><a href="/"><img src="assets/images/components/home.svg"
                                      alt="icône d'une maison" /> Accueil</a></li>
-        <li><a href="about_us.php"><img src="assets/images/components/buste.svg" alt="icône d'un buste d'homme" /> Qui sommes-nous ?</a></li>
-        <li><a href="contact_us.php"><img src="assets/images/components/enveloppe.svg" alt="icône d'une enveloppe" /> Contactez-nous</a></li>
+        <li><a href="/about_us"><img src="assets/images/components/buste.svg" alt="icône d'un buste d'homme" /> Qui sommes-nous ?</a></li>
+        <li><a href="/contact_us"><img src="assets/images/components/enveloppe.svg" alt="icône d'une enveloppe" /> Contactez-nous</a></li>
     </ul>
 
     <ul id="legal_link">
