uncommented JS scripts

--- a/src/View/Contact/contact.html.twig
+++ b/src/View/Contact/contact.html.twig
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="/assets/css/contact_us.css">
 {% endblock %}
 
-{#{% block javascript %}
+{% block javascript %}
 <script src="assets/js/contact.js"></script>
-{% endblock %}#}
+{% endblock %}
 
 {% block content %}
 <main>
