test home with picture

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -6,9 +6,9 @@
     <section class="hotNews_block">
     
         <article class="card bigNews">
-            <a href="article.php?article=<?= $art['parameter_url'] ?>">
+            <a href="#">
                 <div class="title_bigNews title_news">
-                    <img class="big" src="<?= $art['coverImg'] ?>" alt="image de l'article principal">
+                    <img class="big" src="/assets/images/home_picture/montagne1.png" alt="image de l'article principal">
                     <div class="articleTeasing">
                         <h1>titlehome</h1>
                         <p>description</p>
@@ -21,7 +21,7 @@
         <?php foreach ($twoArticle as $artTwo) : ?>
             <a href="article.php?article=<?= $artTwo['parameter_url'] ?>">
                 <div class="card1">
-                    <img class="small" src="<?= $artTwo['coverImg'] ?>" alt="image de l'article secondaire">
+                    <img class="small" src="/assets/images/home_picture/montagne1.png" alt="image de l'article secondaire">
                     <h2><?= $artTwo['titleHome'] ?></h2>
                 </div>
             </a>
@@ -36,7 +36,7 @@
                 <article class="article_block">
                     <div class="card_container">
                         <div class="card2">
-                            <img class="medium" src="<?= $articleInfo['coverImg'] ?>" alt="image de l'article secondaire">
+                            <img class="medium" src="/assets/images/home_picture/montagne1.png" alt="image de l'article secondaire">
                         </div>
                     </div>
                     <div class="little_article">
