fix last issue on components

--- a/src/View/components/_about_us_card.html.twig
+++ b/src/View/components/_about_us_card.html.twig
@@ -4,7 +4,7 @@
             <img src="assets/images/authors/{{ author.imgSrc }}" alt="Lucas Boillot">
         </figure>
         <span class="authorName">
-                                <h2> {{ author.firstName }} . ' ' . {{ author.lastName }} </h2>
+                                <h2> {{ author.firstName }} {{ author.lastName }} </h2>
                             </span>
         <div class="website">
             <a href={{ author.websiteURL }} ><img src="assets/images/components/myWebSite.svg" alt="Site web
@@ -27,3 +27,6 @@
     Github"> Mon espace
         Github</a>
 </article>
+<figure class="separationAbout">
+    <img class="smallSeparation" src="assets/images/components/small_separation.svg" alt="small separation">
+</figure>
