update alt on profil img

--- a/src/View/components/_about_us_card.html.twig
+++ b/src/View/components/_about_us_card.html.twig
@@ -1,7 +1,7 @@
 <article>
     <div class="leftSide">
         <figure class="profil">
-            <img src="assets/images/authors/{{ author.imgSrc }}" alt="Lucas Boillot">
+            <img src="assets/images/authors/{{ author.imgSrc }}" alt={{ author.firstName }} {{ author.lastName }}>
         </figure>
         <span class="authorName">
                                 <h2> {{ author.firstName }} {{ author.lastName }} </h2>
