--- a/src/View/Article/article.html.twig
+++ b/src/View/Article/article.html.twig
@@ -32,5 +32,16 @@
                 {{ classname }}
             </p>
         </section>
+
+        <a href="/about_us" id="author_section" class="content-width">
+            <aside id="left_author">
+                <img id="author_img" src="{{ author.authorImg }}" alt="Photo de l'auteur {{ author.firstName }} {{ author.lastName }}" />
+                <h3 id="author_name">{{ author.firstName }} {{ author.lastName }}</h3>
+            </aside>
+            <article id="right_author">
+                <h3 id="author_title_desc">A propos de l'auteur :</h3>
+                {{ author.shortDescription }}
+            </article>
+        </a>
     </main>
 {% endblock %}
