--- a/src/View/Article/article.html.twig
+++ b/src/View/Article/article.html.twig
@@ -23,7 +23,7 @@
         <section class="content-width body_text">
             <h2 class="body_title">Introduction</h2>
             <p class="article_P">
-                {{ article.imgSrc }}{{ article.introduction }}
+                {{ article.introduction }}
             </p>
 
             <h2 class="body_title">Le détail</h2>
