related Article pluged with BDD

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -18,14 +18,15 @@
         </article>
     
     <article class="card middle_news">
-        <?php foreach ($twoArticle as $artTwo) : ?>
-            <a href="article.php?article=<?= $artTwo['parameter_url'] ?>">
+    {# <pre> {{ dump(relatedArticles) }}</pre> #}
+        {% for relatedArticle in relatedArticles %}
+            <a href="#">
                 <div class="card1">
-                    <img class="small" src="/assets/images/home_picture/montagne1.png" alt="image de l'article secondaire">
-                    <h2><?= $artTwo['titleHome'] ?></h2>
+                    <img class="small" src="{{ relatedArticle.images }}" alt="image de l'article secondaire">
+                    <h2>{{ relatedArticle.homeTitle }}</h2>
                 </div>
             </a>
-        
+        {% endfor  %}
     </article>
 </section>
 <span class="separation_bar"><img class="separation" src="/assets/images/components/separation.svg" alt="Barre de séparation"></span>
