--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,52 +1,55 @@
 {% extends 'layout.html.twig' %}
-{% block stylesheet %} 
-    <link rel="stylesheet" href="/assets/css/home.css">
+{% block stylesheet %}
+	<link rel="stylesheet" href="/assets/css/home.css">
 {% endblock %}
 {% block content %}
-    <section class="hotNews_block">
-    
-        <article class="card bigNews">
-            <a href="#">
-                <div class="title_bigNews title_news">
-                    <img class="big" src="{{ mainArticle.images }}" alt="image de l'article principal">
-                    <div class="articleTeasing">
-                        <h1>{{ mainArticle.homeTitle }}</h1>
-                        <p>{{ mainArticle.homePreview }}</p>
-                    </div>
-                </div>
-            </a>
-        </article>
-    
-    <article class="card middle_news">
-    {# <pre> {{ dump(relatedArticles) }}</pre> #}
-        {% for relatedArticle in relatedArticles %}
-            <a href="#">
-                <div class="card1">
-                    <img class="small" src="{{ relatedArticle.images }}" alt="image de l'article secondaire">
-                    <h2>{{ relatedArticle.homeTitle }}</h2>
-                </div>
-            </a>
-        {% endfor  %}
-    </article>
-</section>
-<span class="separation_bar"><img class="separation" src="/assets/images/components/separation.svg" alt="Barre de séparation"></span>
+	<main>
+		<section class="hotNews_block">
+			<article class="card bigNews">
+				<a href="/article?id={{mainArticle.id}}">
+					<pre></pre>
+					<div class="title_bigNews title_news">
+						<img class="big" src="{{ mainArticle.imgSrc }}" alt="{{ mainArticle.altImg}}">
+						<div class="articleTeasing">
+							<h1>{{ mainArticle.homeTitle }}</h1>
+							<p>{{ mainArticle.homePreview }}</p>
+						</div>
+					</div>
+				</a>
+			</article>
 
-<section class="article_list">
-    
-            <a href="article.php?article=<?= $articleInfo['parameter_url'] ?>">
-                <article class="article_block">
-                    <div class="card_container">
-                        <div class="card2">
-                            <img class="medium" src="/assets/images/home_picture/montagne1.png" alt="image de l'article secondaire">
-                        </div>
-                    </div>
-                    <div class="little_article">
-                        <h3> $articleInfo['title'] </h3>
-                        <p>articleInfo['description']
-                        </p>
-                    </div>
-                </article>
-            </a>
-       
-</section>
+			<article class="card middle_news">
+				{% for relatedArticle in relatedArticles %}
+					<a href="/article?id={{relatedArticle.id }}">
+						<div class="card1">
+							<img class="small" src="{{ relatedArticle.imgSrc }}" alt="{{ relatedArticle.altImg }}">
+							<h2>{{ relatedArticle.homeTitle }}</h2>
+						</div>
+					</a>
+				{% endfor  %}
+			</article>
+		</section>
+		<span class="separation_bar"><img class="separation" src="/assets/images/components/separation.svg" alt="Barre de séparation"></span>
+
+		<section class="article_list">
+			{% for allArticle in allArticles %}
+				<a href="/article?id={{ allArticle.id }}">
+					<article class="article_block">
+						<div class="card_container">
+							<div class="card2">
+								<img class="medium" src="{{ allArticle.imgSrc }}" alt="{{ allArticle.altImg }}">
+							</div>
+						</div>
+						<div class="little_article">
+							<h3>
+								{{ allArticle.homeTitle }}
+							</h3>
+							<p>{{ allArticle.description }}
+							</p>
+						</div>
+					</article>
+				</a>
+			{% endfor %}
+		</section>
+	</main>
 {% endblock %}
