fix arrow & js contact form

--- a/src/View/Article/article.html.twig
+++ b/src/View/Article/article.html.twig
@@ -6,6 +6,8 @@
 
 {% block content %}
     <main>
+        <a id="go_back" href="/"><img src="assets/images/components/back-arrow.svg" alt="icone d'une flèche vers
+        l'arrière noire" /></a>
         <section class="content-width body_text">
             <h1 id="article_title">
                 {{ article.articleTitle }}
