created admin articles twig file

--- a/src/View/AdminArticles/index.html.twig
+++ b/src/View/AdminArticles/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'AdminLayout.html.twig' %}
 
 {% block stylesheet %}
     <link rel="stylesheet" href="/assets/css/admin/adminArticles.css">
