added admin main color

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -1,6 +1,7 @@
 * {
     --main-color: #FFA458;
     --color-hover: #793700;
+    --admin-color: #9EA7D8;
     --our-black: rgb(11, 11, 11);
     --header-height-desktop: 8rem;
     --footer-height-desktop: 195px;
